--- a/style/main.css
+++ b/style/main.css
@@ -146,4 +146,153 @@ isolation: isolate;
 body {
   font-family: 'Commissioner', sans-serif;
   color: black;
+  overflow: hidden;
+}
+.header-sec {
+  height: 300px;
+  background: url(../images/image-hero-mobile.jpg) no-repeat center center;
+  background-size: cover;
+}
+header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding-top: 30px;
+}
+nav {
+  display: flex;
+  flex-flow: row nowrap;
+}
+.navbar-list {
+  list-style-type: none;
+  list-style-position: inside;
+  display: flex;
+  flex-flow: column nowrap;
+}
+.navbar-list a{
+  text-decoration: none;
+  color: black;
+}
+#menu-button {
+  display: inline;
+  cursor: pointer;
+}
+#menu-button span {
+  width: 16px;
+  height: 3px;
+  background-color: #fff;
+  display: block;
+  transition: all 0.8s ease-out;
+  transform-origin: center;
+}
+.hamburger-icon .icon-bars > * + * {
+  margin-top: 3px;
+}
+.close-icon {
+  transform: translateX(12px);
+}
+.close-icon span:nth-child(1) {
+  transform: rotate(45deg) translate(-5.5px, 10px);
+}
+#menu-button.close-icon span:nth-child(2) {
+  width: 0px;
+  opacity: 0;
+}
+.close-icon span:nth-child(3) {
+  transform: rotate(-45deg) translate(-5.5px, -10px);
+}
+#navbar {
+  position: absolute;
+  --max-width: 1110px;
+  --hr-padding: 1.5rem;
+  width: min(var(--max-width), 100% - (var(--hr-padding)*2));
+  background-color: #fff;
+  border-radius: 0.5rem;
+  transition: all 0.7s linear;
+}
+[data-status="inactive"] {
+  opacity: 0;
+  transform: translate(125%, 40px);
+}
+[data-status="active"] {
+  opacity: 1;
+  transform: translate(calc(-100% + 16px), 40px);
+}
+.navbar-list li {
+  height: 70px;
+  padding: 0px 1.5rem;
+  opacity: 0;
+  transition: all 0.8s ease-out;
+  transform: translateX(125%);
+}
+[data-status="active"] li {
+  opacity: 1;
+  transform: translateX(0%);
+}
+[data-status="active"] li:nth-child(1){
+  transition-delay: 0.1s;
+}
+[data-status="active"] li:nth-child(2){
+  transition-delay: 0.2s;
+}
+[data-status="active"] li:nth-child(3){
+  transition-delay: 0.3s;
+}
+.navbar-list > * + * {
+  border-top: 1px solid hsla(0, 0%, 48%, 0.2);
+}
+.navbar-list li a {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  font-size: var(--navbar-fs);
+  font-weight: var(--navbar-fw);
+}
+@media (min-width:50em){
+  .header-sec {
+    height: 400px;
+    background: url(../images/image-hero-desktop.jpg) no-repeat center center;
+    background-size: cover;
+  }
+  header {
+    padding-top: 40px;
+  }
+  .navbar-list {
+    flex-flow: row nowrap;
+  }
+  .navbar-list li {
+    opacity: 1;
+    transform: none;
+    transition: none;
+  }
+  .navbar-list a{
+    color: #fff;
+  }
+  .navbar-list a:hover, .navbar-list a:active{
+    text-decoration: underline;
+  }
+  .navbar-list > * + * {
+    margin-left: 34px;
+    border: none;
+  }
+  #menu-button {
+    display: none;
+  }
+  #navbar {
+    position: static;
+    background: none;
+    transform: none;
+    border-radius: 0;
+    transition: none;
+    width: auto;
+  }
+  .navbar-list li {
+    height: auto;
+    padding: 0;
+  }
+  [data-status="inactive"] {
+    opacity: 1;
+    transform: none;
+  }
 }
