--- a/style/main.css
+++ b/style/main.css
@@ -201,6 +201,9 @@ header {
   align-items: center;
   padding-top: 30px;
 }
+header h3 {
+  z-index: 3;
+}
 nav {
   display: flex;
   flex-flow: row nowrap;
@@ -218,6 +221,7 @@ nav {
 #menu-button {
   display: inline;
   cursor: pointer;
+  z-index: 2;
 }
 #menu-button span {
   width: 16px;
@@ -252,6 +256,17 @@ nav {
   transform: translate(0px, 40px);
   transition: all 0.7s linear;
   z-index: 2;
+  border-radius: 0.5rem;
+}
+#navbar::after {
+  content: "";
+  position: absolute;
+  inset: -28.625rem;
+  z-index: -5;
+  filter: blur(35px);
+  opacity: 0.7;
+  background: linear-gradient(180deg, rgb(0 0 0) 0%, rgb(176 176 176 / 50%) 100%);
+  pointer-events: none;
 }
 [data-status="inactive"] {
   opacity: 0;
@@ -261,6 +276,13 @@ nav {
   opacity: 1;
   right: 0;
   transform: translate(-24px, 40px) !important;
+}
+.scroll-lock {
+  overflow: hidden;
+}
+.navbar-list {
+  background-color: #fff;
+  border-radius: 0.5rem;
 }
 .navbar-list li {
   height: 70px;
@@ -451,6 +473,12 @@ nav {
     border-radius: 0;
     transition: none;
     width: auto;
+  }
+  #navbar::after {
+    content: none;
+  }
+  .navbar-list {
+    background: none;
   }
   .navbar-list li {
     height: auto;
