--- a/style/main.css
+++ b/style/main.css
@@ -140,8 +140,8 @@ isolation: isolate;
 }
 .pledge-card {
   width: 100%;
-  padding: 1.375rem;
-  border: 2px solid hsla(0, 0%, 48%, 0.1);
+  padding: 1.5rem;
+  border: 2px solid hsla(0, 0%, 48%, 0.2);
   border-radius: 0.5rem;
 }
 .pledge-header {
@@ -435,6 +435,104 @@ nav {
 .select-reward-btn {
   margin-top: 24px;
 }
+/* Dialog/modal design */
+.dialog-container,
+.dialog-overlay {
+  position: fixed;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+}
+.dialog-container {
+  z-index: 3;
+  display: flex;
+}
+.dialog-container[aria-hidden='true'] {
+  display: none;
+}
+.dialog-overlay {
+  background-color: rgba(0, 0, 0, 0.65); 
+}
+.dialog-content {
+  margin: auto; 
+  z-index: 2; 
+  position: relative;
+}
+
+.back-project-sec {
+  --max-width: 730px;
+  --hr-padding: 1.5rem;
+  width: min(var(--max-width), 100% - (var(--hr-padding)*2));
+  margin-inline: auto;
+  background-color: white;
+  padding: 1.875rem 1.5rem;
+  border-radius: 0.5rem;
+}
+.back-project-header {
+  display: flex;
+  flex-flow: row nowrap;
+  justify-content: space-between;
+  align-items: center;
+}
+.back-project-header button {
+  border: none;
+  background: none;
+  cursor: pointer;
+}
+.back-project-description {
+  margin-top: 1.25rem;
+}
+.back-project-card-sec {
+  margin-top: 1.875rem;
+}
+.back-project-card-sec > * + * {
+  margin-top: 1.5rem;
+}
+.reward-card {
+  width: 100%;
+  padding: 1.5rem;
+  border: 2px solid hsla(0, 0%, 48%, 0.2);
+  border-radius: 0.5rem;
+  display: flex;
+  flex-flow: column nowrap;
+}
+.reward-header-sec {
+  display: flex;
+  flex-flow: row nowrap;
+  align-items: center;
+}
+.select-reward {
+  display: flex;
+  align-items: center;
+}
+.pledge-radio-btn {
+  width: 24px;
+  height: 24px;
+  border-radius: 50%;
+  padding: 4px;
+  border: 1px solid hsla(0, 0%, 48%, 0.2);
+}
+.pledge-radio-btn:hover {
+  border: 1px solid var(--moderate-cyan);
+}
+.reward-header {
+  display: flex;
+  flex-flow: column nowrap;
+  margin-left: 1rem;
+}
+.reward-description {
+  margin-top: 1.5rem;
+}
+.reward-left {
+  margin-top: 1.5rem;
+}
+.reward-left-number {
+  font-size: var(--fs-200);
+  font-weight: var(--fw-700);
+  color: #000;
+  margin-right: 8px;
+}
 
 @media (min-width:50em){
   .header-sec {
@@ -540,5 +638,52 @@ nav {
   }
   .select-reward-btn {
     margin-top: 0px;
+  }
+  /* Dialog/modal design */
+  .back-project-sec {
+    padding: 1.875rem 3rem;
+  }
+  .back-project-header {
+    flex-flow: column nowrap;
+    justify-content: flex-start;
+    align-items: flex-start;
+  }
+  .back-project-header h2 {
+    font-size: 1.5rem;
+    order: 2;
+  }
+  .back-project-header button {
+    align-self: flex-end;
+    margin-right: -1.5rem;
+  }
+  .reward-card {
+    padding: 1.875rem;
+    flex-flow: row wrap;
+    justify-content: space-between;
+    align-items: center;
+  }
+  .reward-header {
+    margin-left: 1.5rem;
+    flex-flow: row nowrap;
+    align-items: center;
+  }
+  .reward-header p {
+    margin-left: 1rem;
+  }
+  .reward-description {
+    margin-top: 1.5rem;
+    margin-left: 3rem;
+    width: 100%;
+    order: 3;
+  }
+  .reward-left {
+    margin-top: 0px;
+    order: 2
+  }
+  .reward-left-number {
+    font-size: var(--fs-200);
+    font-weight: var(--fw-700);
+    color: #000;
+    margin-right: 8px;
   }
 }
